--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,10 @@
   --basic-gray: #EEEEEE;
   --basic-dark-gray: #A6A6A6;
   --basic-low-gray: #DFDFDF;
+  --basic-high-gray: #D5D5D5;
   --basic-medium-gray: #666666;
   --basic-middle-gray: #888888;
+  --basic-hyper-gray: #DBDBDB;
   --basic-extra-gray: #4D4D4D;
   --basic-silver-gray: #C4C4C4;
   --basic-nano-gray: #F2F2F2;
@@ -35,9 +37,13 @@
   --basic-shadow-gray: 0px 6px 15px rgba(0, 1, 1, 0.25);
   --basic-shadow: 0px 2px 1px rgba(0, 0, 0, 0.15);
 
+
+
   --basic-gradient-gray: linear-gradient(0deg, #E1E1E1, #E1E1E1);
   --basic-gradient-red: linear-gradient(0deg, #E74246, #E74246);
   --basic-gradient-dark-red: linear-gradient(0deg, #D7373B, #D7373B);
+
+  --basic-background-white: rgba(0, 0, 0, 0.0001)
 }
 
 /* Global */
@@ -140,7 +146,7 @@ img {
 }
 
 .button:active {
-  color: var(--basic-dark-gray);
+  color: var(--basic-dark-gray)
 }
 
 .photoslides-know-button {
@@ -340,4 +346,160 @@ img {
 .sale-desc {
   line-height: 22px;
   color: var(--basic-gray-black);
+}
+
+ /* Catalog title */
+
+.catalog-title {
+  font-weight: 500;
+  font-size: 55px;
+  line-height: 55px;
+  text-align: center;
+  color: var(--basic-black);
+  text-align: center;
+}
+
+/* Catalog filtres */
+
+.service-filter-desc,
+.sorting-filter-desc {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: left;
+  text-transform: uppercase;
+  color: var(--basic-black);
+}
+
+.sorting-filter-list,
+.sorting-list {
+  list-style: none;
+}
+
+.sorting-filter-list {
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+
+.sorting-filter-item a {
+  color: var(--basic-black);
+  opacity: 0.3;
+}
+
+.sorting-filter-item a:hover {
+  color: var(--basic-black);
+  opacity: 0.6;
+}
+
+.sorting-filter-item a:active {
+  color: var(--basic-black);
+  opacity: 1;
+}
+
+.sorting-filter-item-current a,
+.sorting-filter-item-current a:hover,
+.sorting-filter-item-current a:active {
+  color: var(--basic-black);
+  opacity: 1;
+}
+
+.sorting-item a {
+  color: var(--basic-dark-gray);
+  opacity: 0.2;
+}
+
+.sorting-item a:hover {
+  color: var(--basic-dark-gray);
+  opacity: 1;
+}
+
+.sorting-item a:active {
+  color: var(--basic-dark-black);
+  opacity: 1;
+}
+
+.sorting-item-current a,
+.sorting-item-current a:hover,
+.sorting-item-current a:active {
+  color: var(--basic-dark-black);
+  opacity: 1;
+}
+
+/* Templates */
+
+.template-list {
+  list-style: none;
+}
+
+.template-price-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--basic-black);
+}
+
+.template-price-title:hover {
+  color: var(--basic-red);
+}
+
+.template-price-title:active {
+  color: var(--basic-black);
+  opacity: 0.3;
+}
+
+.template-price-text {
+  font-size: 16px;
+  line-height: 18px;
+  text-align: center;
+  color: var(--basic-medium-gray)
+}
+
+.template-price-button {
+  background-color: var(--basic-red);
+}
+
+.template-price-button:hover {
+  background-color: var(--basic-medium-red);
+}
+
+.template-price-button:active {
+  color: var(--basic-white);
+  background-color: var(--basic-dark-red);
+  box-shadow: var(--basic-shadow-box);
+}
+
+/* Pagination */
+
+.pagination-list {
+  list-style: none;
+}
+
+.pagination-item a {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--basic-black);
+  background-color: var(--basic-gray);
+}
+
+.pagination-item a:hover {
+  background-color: var(--basic-low-gray);
+}
+
+.pagination-item a:active {
+  color: var(--basic-dark-gray);
+  background-color: var(--basic-high-gray);
+}
+
+.pagination-item-current a,
+.pagination-item-current a:hover,
+.pagination-item-current a:active {
+  color: var(--basic-black);
+  background-color: var(--basic-background-white);
+  border: 3px solid var(--basic-hyper-gray);
 }
