--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,8 @@ body {
   color: var(--basic-extra-black);
   text-transform: none;
   text-align: left;
+  background: url("nerds-illustration.png") no-repeat 0 0;
+  background-color: var(--basic-white);
 }
 
 .page a {
@@ -73,11 +75,22 @@ img {
 
 .container {
   width: 1200px;
+  box-sizing: border-box;
   padding: 0 20px;
   margin: 0 auto;
+}
 
-  outline: 5px solid rgba(0, 0, 155, 0.3);
-  outline-offset: -5px;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 /* ========== Index page ========== */
@@ -114,14 +127,8 @@ img {
   opacity: 0.3;
 }
 
-.main-header-logo img,
-.main-header-logo img:hover {
+.main-header-logo img {
   background-color: var(--basic-black);
-}
-
-.main-header-logo img:active {
-  background-color: var(--basic-white);
-  opacity: 0.3;
 }
 
 /* Photoslides */
@@ -138,6 +145,11 @@ img {
   font-size: 55px;
   line-height: 55px;
   color: var(--basic-black);
+}
+
+.photoslides-item:nth-child(2),
+.photoslides-item:nth-child(3) {
+  display: none;
 }
 
 /* Button */
@@ -159,7 +171,7 @@ img {
 
 .photoslides-know-button {
   background-color: var(--basic-red);
-  margin-bottom: 80px;
+  margin: 0 100px 180px 100px;
 }
 
 .photoslides-know-button:hover {
@@ -240,6 +252,17 @@ img {
 }
 
 /* Statistics */
+
+/*
+.nerds-illustration {
+width: 360px;
+min-height: 208px;
+background-image: url("img/nerds-illustration.png");
+background-color: var(--basic-white);
+background-repeat: no-repeat;
+background-position: 0 0;
+}
+*/
 
 .statistics-list {
   list-style: none;
@@ -355,6 +378,17 @@ img {
 }
 
 /* ========== Catalog page ========== */
+
+.inner-header-logo img,
+.inner-header-logo img:hover {
+  background-color: var(--basic-black);
+}
+
+.inner-header-logo img:active {
+  background-color: var(--basic-white);
+  opacity: 0.3;
+}
+
 /* Catalog title */
 
 .catalog-title {
@@ -637,9 +671,6 @@ padding: 0;
   grid-template-columns: repeat(4, 1fr);
 }
 
-
-
-
 /* Grid footer */
 
 /*
@@ -661,10 +692,11 @@ grid-template-columns: 1fr 1fr 1fr;
 
 .page-catalog {
   display: grid;
-  grid-template-columns: 260px 1fr;
+  grid-template-columns: 260px 760px;
   grid-template-rows: auto 1fr auto;
   column-gap: 140px;
   align-content: start;
+  margin-bottom: 60px;
 }
 
 .service-filter {
@@ -682,16 +714,12 @@ grid-template-columns: 1fr 1fr 1fr;
 }
 
 .templates {
-  margin-bottom: 55px;
+  margin-bottom: 24px;
 }
 
 .template-list {
   margin: 0;
   padding: 0;
-}
-
-.pagination {
-  margin-bottom: 60px;
 }
 
 .pagination-list {
@@ -708,10 +736,11 @@ grid-template-columns: 1fr 1fr 1fr;
   justify-content: space-between;
 }
 
-.main-header-logo {
+.main-header-logo,
+.inner-header-logo {
   display: flex;
   width: 160px;
-  height: 65px;
+  min-height: 65px;
   margin-top: 49px;
 }
 
@@ -765,8 +794,6 @@ grid-template-columns: 1fr 1fr 1fr;
   flex-direction: column;
   align-items: flex-start;
   flex-basis: 651px;
-  outline: 5px solid rgba(255, 0, 0, 0.3);
-  outline-offset: -5px;
   margin: 0;
   padding: 0
 }
@@ -797,8 +824,6 @@ grid-template-columns: 1fr 1fr 1fr;
   flex-basis: 360px;
   margin: 0 0 0 auto;
   padding: 0;
-  outline: 5px solid rgba(0, 255, 255, 0.3);
-  outline-offset: -5px;
 }
 
 .statistics img {
@@ -853,7 +878,7 @@ grid-template-columns: 1fr 1fr 1fr;
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
-  margin: 0 0 68px 0;
+  margin: 68px 0 68px 0;
   padding: 0;
 }
 
@@ -873,9 +898,102 @@ grid-template-columns: 1fr 1fr 1fr;
 }
 
 .sale .sale-tagline {
+  margin-top: 75px;
   margin-bottom: 10px;
 }
 
 .sale .sale-desc {
   margin-bottom: 74px;
+}
+
+
+/* ========== Flex catalog page ========== */
+
+.service-filter {
+  display: flex;
+}
+
+.sorting-filter {
+  display: flex;
+  justify-content: space-between;
+}
+
+.sorting-list {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  width: 103px; /*изменить после обрисовки кнопок*/
+  margin: 0;
+  padding: 0;
+}
+
+.sorting-item {
+  margin-right: 18px;
+}
+
+.sorting-item:nth-child(2n) {
+  margin-right: 0;
+}
+
+.sorting-filter-desc {
+  margin-right: 266px;
+}
+
+.sorting-filter-list {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  width: 272px;
+  margin: 0;
+  padding: 0;
+}
+
+.sorting-filter-item {
+  margin-right: 20px; /*изменить после обрисовки кнопок*/
+}
+
+.sorting-filter-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+
+.template-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+}
+
+.template-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-basis: 360px;
+  margin-right: 40px;
+}
+
+.template-item:nth-child(2n) {
+  margin-right: 0;
+}
+
+.template-picture {
+  margin-left: 1px;
+  margin-bottom: 31px;
+}
+
+.pagination-list {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  width: 443px;
+  margin: 0;
+  padding: 0;
+}
+
+.pagination-item {
+  margin-right: 11px;
+}
+
+.pagination-item:nth-child(4n) {
+  margin-right: 0;
 }
